# completely

./: .gitignore  README.md  pyproject.toml  setup.py
completely/: __init__.py
tests/: test_generic.py
