[tool.poetry]
name = "completely"
version = "0.1.0"
description = "Measure the completeness of your data"
authors = ["Maximilian Wolf <wunderkind.serie-0f@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
